--- a/src/Home.css
+++ b/src/Home.css
@@ -177,6 +177,7 @@
     background: linear-gradient(90deg, rgba(42,37,170,1) 0%, rgba(163,92,255,1) 42%, rgba(129,234,255,1) 100%);
     width: 100%;
     height: 3px;
+    margin-top: -10px;
 }
 
 .Home_Social {
