--- a/public/style.css
+++ b/public/style.css
@@ -145,7 +145,7 @@ body{
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #2ea0e8;; 
+    background: #2ea0e8; 
   }
 
   
