--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -21,7 +21,7 @@
     box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.082);
 }
 .login.message.success {
-    padding: 10px 80px 10px 80px;
+    padding: 10px 80px;
 }
 .login.background {
     background-color: rgba(255, 255, 255, 0.596);
