New style for information messages

--- a/public/style.css
+++ b/public/style.css
@@ -175,27 +175,25 @@ body{
     background-color: #2ea0e8;
     text-align: center;
     width: fit-content;
-    padding: 15px;
-    border-radius: 12px;
+    padding: 15px 50px;
     margin-top: 20px;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     color: white;
-    z-index: 1;
+    z-index: 15;
+    border-radius: 12px;
 }
 
 
 .default_message.wrong {
-    background-color: #ffffff;
-    border: 1px solid #b9b9b9;
-    color: rgb(48, 48, 48);
+    background-color: #ff3c3c;
+    color: rgb(255, 255, 255);
     max-width: 90%;
 }
 .default_message.success {
-    background-color: #ffffff;
-    border: 1px solid #b9b9b9;
-    color: rgb(48, 48, 48);
+    background-color: #19ac4a;
+    color: rgb(255, 255, 255);
     max-width: 90%;
 }
 .white_background {
@@ -205,46 +203,24 @@ body{
   left:0;
   bottom: 0;
   right: 0;
-  z-index: 1;
+  z-index: 10;
 }
-.wrong.button.ok {
-    background-color: #ff3c3c;
+.button.ok {
     border: none;
-    border-radius: 8px;
     font-weight: bold;
     padding: 8px 40px;
     color: rgb(255, 255, 255);
+    background-color: transparent;
     margin-bottom: -25px;
     text-decoration: none;
+    border: 2px solid #ffffff;
+    border-radius: 90px;
+}
+/*
+.button.wrong.ok {
+    background-color: #ff3c3c;
 }
 .button.success.ok {
     background-color: #19ac4a;
-    border: none;
-    border-radius: 8px;
-    font-weight: bold;
-    padding: 8px 40px;
-    color: rgb(255, 255, 255);
-    margin-bottom: -25px;
-    text-decoration: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+*/
