--- a/src/elements/Footer.css
+++ b/src/elements/Footer.css
@@ -1,4 +1,5 @@
 .footer_contener {
+    background-color: white;
     padding: 15px;
     -webkit-box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.062);
     -moz-box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.062);
