--- a/src/elements/Footer.css
+++ b/src/elements/Footer.css
@@ -1,28 +1,33 @@
-.footer_contener {
-    background-color: white;
-    padding: 15px;
-    -webkit-box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.062);
-    -moz-box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.062);
-    box-shadow: 0 3px 6px 10px rgba(0, 0, 0, 0.062);
-  }
-
-  .footer_line {
-      width: 100%;
-      display: flex;
-      padding: 10px;
-      align-items: center;
-      justify-content: center;
-  }
-
-  .footer.line {
-      margin-left: auto;
-      margin-right: auto;
-  }
-
-  @media (max-width: 600px) {
-    .footer.line {
-        display: block;
+    .footer_contener {
+        background-color: white;
+        padding: 15px;
+        -webkit-box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.062);
+        -moz-box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.062);
+        box-shadow: 0 3px 6px 10px rgba(0, 0, 0, 0.062);
+        height: 44px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
     }
-}
 
-  
+    .footer_line {
+        width: 100%;
+        display: flex;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+    }
+
+    .footer.line {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @media (max-width: 600px) {
+        .footer.line {
+            display: block;
+        }
+    }
+
